# WisLand-Feed

./: .gitignore  .typos.toml  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.worker  README-CN.md  README.md  base.dev.toml  base.pre.toml  base.prod.toml  base.toml  docker-compose.yml
.github/actions/send-feishu/: action.yml
.github/actions/setup-kubectl-ack/: action.yml
.github/workflows/: build-dev.yml  build-prod.yml  deploy-ack-dev.yml  deploy-ack-pre.yml  deploy-ack-prod.yml  deploy-ack-prod.yml.bak  deploy-dev.yml.bak  deploy-main.yml.bak
crates/nacos_config/: Cargo.toml
crates/nacos_config/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  consts.rs  lib.rs  main.rs
crates/server/src/middlewares/: auth.rs  log.rs
crates/server/src/model/: base.rs  mod.rs  page.rs
crates/server/src/routers/: health.rs  mod.rs
crates/server/src/routers/feed/: feeds.rs  interests.rs  mod.rs  paper.rs  rss.rs  subscriptions.rs
crates/server/src/state/: app_state.rs
crates/server/tests/: concurrent_multi_user_verify_test.rs  concurrent_user_interests_test.rs  concurrent_verify_and_query_test.rs  single_user_verify_test.rs  user_paper_verifications_query_test.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
crates/worker/tests/: arxiv_parser_test.rs  bench_verify.rs  extract_tex_from_latex_tar_gz_test.rs  metadata_from_interest_test.rs  run_verify_with_input_test.rs  update_source_data_test.rs  verify_data_test.rs  verify_service_lock_test.rs  workers_e2e.rs
k8s/base-dev/: deployment.yml  ingress.yaml  service.yaml
k8s/base-pre/: deployment.yml  ingress.yaml  service.yaml
k8s/base-prod/: deployment.yml  ingress.yaml  service.yaml
k8s/canary/: deployment-canary.yml  ingress-canary.yaml  service-canary.yml
sql/: 20250908.sql
