[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
# axum web framework
axum = "0.8"
axum-extra = "0.10"

# async runtime
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tokio-util = "0.7"
async-stream = "0.3"
async-trait = "0.1"

# database
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio",
] }

# utoipa for API documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = [
    "axum",
    "vendored",
], default-features = false }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# tracing log framework
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

# json serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# configuration management
arc-swap = "1"
figment = { version = "0.10", features = ["env", "toml"] }

# error
snafu = "0.8"

# http
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
http = "1"

# redis
bb8 = "0.9"
bb8-redis = "0.24"
redis = { version = "0.32", features = ["bb8", "tokio-rustls-comp"] }

# misc
itertools = "0.14"
regex = "1"
chrono = "0.4"
md5 = "0.8"
typed-builder = "0.21.0"
uuid = { version = "1", features = ["v4", "serde"] }
rust-embed = "8"
base64 = "0.22"
quick-xml = { version = "0.38", features = ["serialize"] }
dotenvy = "0.15.7"


# 开发环境：使用 patch 覆盖为本地路径（URL 必须完全匹配！）
[patch.'ssh://git@github.com/AtomInnoLab/WisAgent.git']
conf = { path = "../WisAgent/crates/conf" }
common = { path = "../WisAgent/crates/common" }
search = { path = "../WisAgent/crates/search" }
protocol = { path = "../WisAgent/crates/protocol" }
seaorm-db = { path = "../WisAgent/crates/seaorm-db" }
feed = { path = "../WisAgent/crates/feed" }
oss = { path = "../WisAgent/crates/oss" }
