[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# config = { path = "../config" }
# database = { path = "../database" }
# mxagent = { path = "../mxagent" }

bytes = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
snafu = { workspace = true }
sea-orm = { workspace = true }
# base64 = { workspace = true }
figment = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-scalar = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }

http-body-util = "0.1.3"
tower-http = { version = "0.6", features = ["trace", "catch-panic"] }
# redis
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
apalis = { version = "0.7.1", features = ["retry", "limit", "timeout"] }
apalis-redis = "0.7.1"

conf = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", version = "*", package = "conf", features = ["feed", "agent_redis"] }
common = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", version = "*", package = "common" }
search = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", version = "*", package = "search", default-features = false, features = [
    "feed",
] }
protocol = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", version = "*", package = "protocol", default-features = false, features = [
    "feed",
    "redis"
] }
seaorm-db = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", version = "*", package = "seaorm-db", default-features = false, features = [
    "feed",
] }
feed = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", version = "*", package = "feed", default-features = false, features = ["redis"]}



# conf = { path = "../../../WisAgent/crates/conf", version = "*", package = "conf", features = [
#     "feed",
#     "agent_redis"
# ] }
# common = { path = "../../../WisAgent/crates/common", version = "*", package = "common" }
# search = { path = "../../../WisAgent/crates/search", version = "*", package = "search", default-features = false, features = [
#     "feed",
# ] }
# protocol = { path = "../../../WisAgent/crates/protocol", version = "*", package = "protocol", default-features = false, features = [
#     "feed",
#     "redis",
# ] }
# seaorm-db = { path = "../../../WisAgent/crates/seaorm-db", version = "*", package = "seaorm-db", default-features = false, features = [
#     "feed",
# ] }
# feed = { path = "../../../WisAgent/crates/feed", version = "*", package = "feed", default-features = false, features = ["redis"]}