[package]
name = "worker"
version = "0.1.0"
edition = "2024"


[dependencies]
tracing = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }

# 统一使用 SSH git 源作为基础声明
conf = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", default-features = false, features = [
    "feed",
    "agent_redis",
] }
feed = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", default-features = false, features = [
    "redis",
    "cloud",
] }


[dev-dependencies]
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
apalis = { version = "0.7.1", features = ["retry", "limit", "timeout"] }
apalis-redis = "0.7.1"
apalis-sql = { version = "0.7.1", features = [
    "migrate",
    "tokio-comp",
    "postgres",
] }
apalis-cron = "0.7.3"
chrono = { workspace = true }
rss = "2.0"
uuid = { workspace = true }
anyhow = "1"
seaorm-db = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", default-features = false, features = [
    "feed",
] }
search = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", default-features = false, features = [
    "feed",
    "cloud",
] }
protocol = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", default-features = false, features = [
    "feed",
    "redis",
] }
oss = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", default-features = false }
paper = { git = "ssh://git@github.com/AtomInnoLab/WisAgent.git", branch = "dev", default-features = false }
tempfile = "3.8"
flate2 = "1.0"
tar = "0.4"
